MDEV-8432: Merges ALL_SIGNED/ALL_UNSIGNED values for slave_type_conversions from MYSQL 5.6.